--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
  body, html {
         height: 100%;
+        background-color: #F8F7FA;
     }
       .splash {
         background-image:url(web_bg.png);
@@ -129,4 +130,11 @@
 
         .neg-margin{
             margin-bottom:-5px;
+        }
+
+        .deposit_text{
+          background-color: #e9ecef;
+          border-radius: .3rem;
+          margin-bottom: 2rem;
+          padding: 2rem 0rem 1rem;
         }
