--- a/main.css
+++ b/main.css
@@ -138,3 +138,8 @@
           margin-bottom: 2rem;
           padding: 2rem 0rem 1rem;
         }
+
+        .img-wrapper-healthdevelopmentpanel img{
+          height:255px;
+          width:255px;
+        }
