--- a/main.css
+++ b/main.css
@@ -36,6 +36,12 @@
           .label{
             font-size:20px;
           }
+		  
+		  
+		  .barchart{
+			width:100%;
+			height:100%;
+		  }
 
           #buyticket_btn, #info_btn{
             width:45vmax;
@@ -55,6 +61,7 @@
           .label{
             font-size:20px;
           }
+
 
           #buyticket_btn, #info_btn{
             width:25vmax;
@@ -79,6 +86,7 @@
           #buyticket_btn, #info_btn{
             width:25vmax;
         }
+
 
         .speakerTitle{
             font-size:1.5vmax;
