--- a/main.css
+++ b/main.css
@@ -43,7 +43,7 @@
             width:45vmax;
         }
         .speakerTitle{
-            font-size:4vmax;
+            font-size:3vmax;
         }
 
     }
@@ -64,7 +64,7 @@
 		
 
         .speakerTitle{
-            font-size:4vmax;
+            font-size:30px;
         }
 
     }
@@ -85,7 +85,7 @@
 		
 
         .speakerTitle{
-            font-size:1.5vmax;
+            font-size:30px;
         }
 
     }
