--- a/main.css
+++ b/main.css
@@ -27,6 +27,8 @@
 
 
 
+
+
      @media only screen and (max-width: 576px) {
 
           .countdown-block{
@@ -65,6 +67,15 @@
             width:25vmax;
         }
 		
+		.mtt-5 {
+			margin-top: 5rem!important;
+			width:350px;
+			height:350px;
+		}
+		
+		.ptt-5 {
+			padding-top:40px;
+		}
 
         .speakerTitle{
             font-size:30px;
@@ -86,6 +97,16 @@
             width:25vmax;
         }
 		
+		.mtt-5 {
+			margin-top: 5rem!important;
+			width:350px;
+			height:350px;
+			margin-left: 7rem!important;
+		}
+		
+		.ptt-5 {
+			padding-top:40px;
+		}
 
         .speakerTitle{
             font-size:30px;
@@ -115,7 +136,7 @@
             font-size: 3vmax;
        }
 	   
-       #buytickets_pg, #about_pg{
+       #buytickets_pg, #page_pg{
             background-color:#F8F7FA;
        }
 
@@ -155,5 +176,43 @@
         .refund_text{
           color:red;
         }
+		
+		/* Style all font awesome icons */
+		.fa {
+		  padding: 15px;
+		  padding-top: 20px;
+		  padding-bottom: 20px;
+		  font-size: 30px;
+		  width: 50px;
+		  text-align: center;
+		  text-decoration: none;
+		}
+
+		/* Add a hover effect if you want */
+		.fa:hover {
+		  opacity: 0.7;
+		  text-decoration: none;
+		}
+
+		/* Set a specific color for each brand */
+
+		/* Facebook */
+		.fa-facebook {
+		  background: #3B5998;
+		  color: white;
+		}
+
+		/* Twitter */
+		.fa-twitter {
+		  background: #55ACEE;
+		  color: white;
+		}
+		
+		/* Twitter */
+		.fa-instagram {
+		  background: #e4405f;
+		  color: white;
+		}
+
 
 
