--- a/main.css
+++ b/main.css
@@ -213,6 +213,33 @@
 		  background: #e4405f;
 		  color: white;
 		}
+		
+		
+
+		.myButton {
+			box-shadow: 0px 0px 0px 2px #9fb4f2;
+			background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
+			background-color:#7892c2;
+			border-radius:10px;
+			border:1px solid #4e6096;
+			display:inline-block;
+			cursor:pointer;
+			color:#ffffff;
+			font-family:Trebuchet MS;
+			font-size:19px;
+			padding:12px 37px;
+			text-decoration:none;
+
+		}
+		.myButton:hover {
+			background:linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
+			background-color:#476e9e;
+		}
+		.myButton:active {
+			position:relative;
+			top:1px;
+		}
+
 
 
 
