--- a/main.css
+++ b/main.css
@@ -1,247 +1,203 @@
- body, html {
-        height: 100%;
-        background-color: #F8F7FA;
-    }
-      .splash {
-        background-image:url(web_bg.png);
-        background-repeat: no-repeat;
-        background-size: cover;
-        overflow: hidden;
-        max-width: 100%;
-      }
+ 
+ 
+/* This sets the background colour of the whole webpage */
+body, html {
+	height: 100%;
+	background-color: #F8F7FA;
+}
+	
+/* This sets the background of the splash screen, the screen at the very start */
+.splash {
+	background-image:url(images/web_bg.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	overflow: hidden;
+	max-width: 100%;
+}
+	
+/* Used when we have a countdown */
+.countdown-block{
+	text-align: center;
+	color:white;
+	width:8vmax;
+}
+	
+/* Change the colour of a piece of text */
+.label{
+	color:white;
+	display:block;
+}
 
-      .countdown-block{
-        text-align: center;
-        color:white;
-        width:8vmax;
-      }
+/* Size of the "information" button */
+#info_btn{
+	width:45vmax;
+}
 
-      .label{
-        color:white;
-        display:block;
-    }
+/* For screens that are 576 pixels and below */
+@media only screen and (max-width: 576px) {
 
-    #buyticket_btn, #info_btn{
-        width:45vmax;
-    }
+	.countdown-block{
+		font-size:14px;
+	}
 
+	.label{
+		font-size:20px;
+	}
+	  
+	.sdg{
+		padding-right: 5px !important;
+		padding-left: 5px !important;
+	}
+	
+	.imgsm{
+		width:110%;
+		margin-left:-5%;
+	}
+	
+	#info_btn{
+		width:45vmax;
+	}
+	.speakerTitle{
+		font-size:3vmax;
+	}
 
+}
 
+/* For screens that are 576 pixels and above */
+@media only screen and (min-width: 576px) {
 
+	.countdown-block{
+		font-size:14px;
+	}
 
-     @media only screen and (max-width: 576px) {
+	.label{
+		font-size:20px;
+	}
 
-          .countdown-block{
-            font-size:14px;
-          }
+	#info_btn{
+		width:25vmax;
+	}
 
-          .label{
-            font-size:20px;
-          }
-		  
-		 .sdg{
-		    padding-right: 5px !important;
-			padding-left: 5px !important;
-		}
-		
-		.imgsm{
-			width:110%;
-			margin-left:-5%;
-		}
-		
-          #buyticket_btn, #info_btn{
-            width:45vmax;
-        }
-        .speakerTitle{
-            font-size:3vmax;
-        }
+	.ptt-5 {
+		padding-top:40px;
+	}
 
-    }
+	.speakerTitle{
+		font-size:30px;
+	}
 
-    @media only screen and (min-width: 576px) {
+}
 
-          .countdown-block{
-            font-size:14px;
-          }
+/* For screens that are 992 pixels and above */
+@media only screen and (min-width: 992px) {
 
-          .label{
-            font-size:20px;
-          }
+	.countdown-block{
+		font-size: 20px;
+	}
 
-          #buyticket_btn, #info_btn{
-            width:25vmax;
-        }
-		
-		.mtt-5 {
-			margin-top: 5rem!important;
-			width:350px;
-			height:350px;
-		}
-		
-		.ptt-5 {
-			padding-top:40px;
-		}
+	.label{
+		font-size: 26px;
+	}
 
-        .speakerTitle{
-            font-size:30px;
-        }
+	#info_btn{
+		width:25vmax;
+	}
+	
+	.ptt-5 {
+		padding-top:40px;
+	}
 
-    }
+	.speakerTitle{
+		font-size:30px;
+	}
 
-    @media only screen and (min-width: 992px) {
+}
+ 
+/* style of the "information" button */
+.btn-outline-white{
+	border-color:#ffffff;
+	color:#ffffff;
+}
 
-          .countdown-block{
-            font-size: 20px;
-          }
+/* size of the oyw logo */
+#oywlogo{
+	width: 40vmax;
+}
 
-          .label{
-            font-size: 26px;
-          }
+/* sets the font to trebuchet */
+.trebuchet{
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
+}
 
-          #buyticket_btn, #info_btn{
-            width:25vmax;
-        }
-		
-		.mtt-5 {
-			margin-top: 5rem!important;
-			width:350px;
-			height:350px;
-			margin-left: 7rem!important;
-		}
-		
-		.ptt-5 {
-			padding-top:40px;
-		}
+/* obsolete at the moment */
+#buytickets_title, #oywtitle{
+	font-size: 3vmax;
+}
 
-        .speakerTitle{
-            font-size:30px;
-        }
+/* obsolete at the moment */
+#buytickets_pg, #page_pg{
+	background-color:#F8F7FA;
+}
 
-    }
-     
+/* obsolete at the moment */
+#video{
+	width:53.1vmax;  /* 1.77 */
+	height:30vmax;   /*  1   */ 
+}
 
-      .navbar{
-            background-color: rgba(255, 255, 255, 0.6);
-      }
+/* used for styling the display of the 2 columns under the "about the event" page */
+.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
 
-      .btn-outline-white{
-            border-color:#ffffff;
-            color:#ffffff;
-        }
+  > .col,
+  > [class*="col-"] {
+	padding-right: 0;
+	padding-left: 0;
+  }
+}
 
-       #oywlogo{
-            width: 40vmax;
-       }
+/* used for the date and time position */
+.neg-margin{
+	margin-bottom:-5px;
+}
 
-       .trebuchet{
-            font-family: "Trebuchet MS", Helvetica, sans-serif;
-       }
+/* Style all font awesome icons - facebook, instagram, twitter */
+.fa {
+  padding: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
 
-       #buytickets_title, #oywtitle{
-            font-size: 3vmax;
-       }
-	   
-       #buytickets_pg, #page_pg{
-            background-color:#F8F7FA;
-       }
+/* Add a hover effect */
+.fa:hover {
+  opacity: 0.7;
+  text-decoration: none;
+}
 
-       #video{
-            width:53.1vmax;  /* 1.77 */
-            height:30vmax;   /*  1   */ 
-       }
+/* Set a specific color for each brand */
 
-       .no-gutters {
-          margin-right: 0;
-          margin-left: 0;
+/* Facebook */
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
 
-          > .col,
-          > [class*="col-"] {
-            padding-right: 0;
-            padding-left: 0;
-          }
-        }
+/* Twitter */
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
 
-        .neg-margin{
-            margin-bottom:-5px;
-        }
-
-        .deposit_text{
-          background-color: #e9ecef;
-          border-radius: .3rem;
-          margin-bottom: 2rem;
-          padding: 2rem 0rem 1rem;
-          border: 1px red solid;
-        }
-
-        .img-wrapper-healthdevelopmentpanel img{
-          height:255px;
-          width:255px;
-        }
-
-        .refund_text{
-          color:red;
-        }
-		
-		/* Style all font awesome icons */
-		.fa {
-		  padding: 15px;
-		  padding-top: 20px;
-		  padding-bottom: 20px;
-		  font-size: 30px;
-		  width: 50px;
-		  text-align: center;
-		  text-decoration: none;
-		}
-
-		/* Add a hover effect if you want */
-		.fa:hover {
-		  opacity: 0.7;
-		  text-decoration: none;
-		}
-
-		/* Set a specific color for each brand */
-
-		/* Facebook */
-		.fa-facebook {
-		  background: #3B5998;
-		  color: white;
-		}
-
-		/* Twitter */
-		.fa-twitter {
-		  background: #55ACEE;
-		  color: white;
-		}
-		
-		/* Twitter */
-		.fa-instagram {
-		  background: #e4405f;
-		  color: white;
-		}
-
-		.myButton {
-			box-shadow: 0px 0px 0px 2px #9fb4f2;
-			background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
-			background-color:#7892c2;
-			border-radius:10px;
-			border:1px solid #4e6096;
-			display:inline-block;
-			cursor:pointer;
-			color:#ffffff;
-			font-family:Trebuchet MS;
-			font-size:19px;
-			padding:12px 37px;
-			text-decoration:none;
-
-		}
-		.myButton:hover {
-			background:linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
-			background-color:#476e9e;
-		}
-		.myButton:active {
-			position:relative;
-			top:1px;
-		}
+/* Instagram */
+.fa-instagram {
+  background: #e4405f;
+  color: white;
+}
 
 
 
