--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ body, html {
 }
 
 /* Size of the "information" button */
-#info_btn{
+#info_btn, #contact_btn{
 	width:45vmax;
 }
 
@@ -54,7 +54,7 @@ body, html {
 		margin-left:-5%;
 	}
 	
-	#info_btn{
+	#info_btn, #contact_btn{
 		width:45vmax;
 	}
 	
@@ -79,7 +79,7 @@ body, html {
 		font-size:20px;
 	}
 
-	#info_btn{
+	#info_btn, #contact_btn{
 		width:25vmax;
 	}
 
@@ -104,7 +104,7 @@ body, html {
 		font-size: 26px;
 	}
 
-	#info_btn{
+	#info_btn, #contact_btn{
 		width:25vmax;
 	}
 	
@@ -172,12 +172,15 @@ body, html {
   width: 50px;
   text-align: center;
   text-decoration: none;
+  color:white;
 }
 
 /* Add a hover effect */
 .fa:hover {
   opacity: 0.7;
   text-decoration: none;
+  cursor:pointer;
+  color:black;
 }
 
 /* Set a specific color for each brand */
@@ -204,4 +207,3 @@ body, html {
 	background: #DF3A01;
 	color: white;
 }
-
